--- a/css/progress.css
+++ b/css/progress.css
@@ -1,17 +1,17 @@
 /* SOURCE: https://css-tricks.com/styling-cross-browser-compatible-range-inputs-css/ */
 
 input[type='range'] {
-	-webkit-appearance: none; /* Hides the slider so that custom slider can be made */
-	width: 100%; /* Specific width is required for Firefox. */
-	background: transparent; /* Otherwise white in Chrome */
+	appearance: none; /* Hides the slider so that custom slider can be made */
+	width: 100%; 
+	background: transparent; 
 }
 
 input[type='range']::-webkit-slider-thumb {
-	-webkit-appearance: none;
+	appearance: none;
 }
 
 input[type='range']:focus {
-	outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
+	outline: none;
 }
 
 input[type='range']::-ms-track {
@@ -26,14 +26,14 @@ input[type='range']::-ms-track {
 
 /* Special styling for WebKit/Blink */
 input[type='range']::-webkit-slider-thumb {
-	-webkit-appearance: none;
+	appearance: none;
 	border: 1px solid #000000;
 	height: 20px;
 	width: 10px;
 	border-radius: 3px;
 	background: #ffffff;
 	cursor: pointer;
-	margin-top: -7px; /* You need to specify a margin in Chrome, but in Firefox and IE it is automatic */
+	margin-top: -7px; 
 	box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; /* Add cool effects to your sliders! */
 }
 
